09-Ingress-Basic/mywork/mymanifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
    - http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port: 
                  number: 80
